objects/SFFG_Prime_Die__c.object
<CustomObject>
    <description>The object is used to store the primedie fields</description>
    <fields>
        <fullName>Backend_Process_ID__c</fullName>
        <label>Backend Process ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Die_Anti_clock_wise_Rotation__c</fullName>
        <inlineHelpText>(0, 90, 180, 270)</inlineHelpText>
        <label>Die Anti-clock wise Rotation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>270</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foundry_to_Add_CrackStop__c</fullName>
        <label>Foundry to Add Crackstop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foundry_to_add_Guardring__c</fullName>
        <label>Foundry to add Guardring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_X_um__c</fullName>
        <label>Size_X_um</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_Y_um__c</fullName>
        <label>Size_Y_um</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Foundry_Frame__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Foundry Frame</label>
        <referenceTo>SFFG_Standard_Foundry_Frame__c</referenceTo>
        <relationshipLabel>SFFG Prime Die&apos;s</relationshipLabel>
        <relationshipName>SFFG_Prime_Die_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SFFG Prime Die</label>
    <nameField>
        <label>SFFG Prime Die Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFFG Prime Die&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>